--- a/A2.27/index.html
+++ b/A2.27/index.html
@@ -11,6 +11,7 @@
         <a href="#">Главная</a>
         <a href="pages/about.html">О нас</a>
         <a href="pages/contacts.html">Контакты</a>
+        <a href="pages/test_css.html">Test_CSS</a>
     </header>
     <main>
         <h1>Моя первая веб-страница</h1>
@@ -44,6 +45,22 @@
     </table>
     <br>
 
+    <div class="items-wrapper">
+        <div class="item special">
+            <span class="item-name">Стол</span>
+            <span class="item-count">32</span>
+        </div>
+        <div class="item">
+            <span class="item-name">Стул</span>
+            <span class="item-count">21</span>
+        </div>
+        <div class="item">
+            <span class="item-name">Полка</span>
+            <span class="item-count">52</span>
+        </div>
+    </div>
+
+    <br>
     <footer>
         <span class="important-text">&copy;&nbsp;Skillfactory</span>
     </footer>
