--- a/A2.27/index.html
+++ b/A2.27/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first Web page</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
     <header>
@@ -60,7 +61,50 @@
         </div>
     </div>
 
+
+    <button id="myBtn">Try it</button>
+
+    <p id="demo"></p>
+
+    <script>
+    var x = document.getElementById("myBtn");
+    x.addEventListener("mouseover", myFunction);
+    x.addEventListener("click", mySecondFunction);
+    x.addEventListener("mouseout", myThirdFunction);
+
+    function myFunction() {
+      document.getElementById("demo").innerHTML += "Moused over!<br>"
+    }
+
+    function mySecondFunction() {
+      document.getElementById("demo").innerHTML += "Clicked!<br>"
+    }
+
+    function myThirdFunction() {
+      document.getElementById("demo").innerHTML += "Moused out!<br>"
+    }
+    </script>
+
+    <button id="button">Try it</button>
+    <p id="demo1"></p>
+    <script>
+        let button = document.querySelector('.popup-button');
+        button.addEventListener('mouseover', showPopup);
+        function showPopup() {
+        	document.querySelector('.popup').classList.add('visible');
+    	}
+
+    	button.addEventListener('mouseout', hidePopup);
+
+    	function hidePopup() {
+        	document.querySelector('.popup').classList.remove('visible');
+    	}
+	</script>
+
+    </script>
+
     <br>
+    
     <footer>
         <span class="important-text">&copy;&nbsp;Skillfactory</span>
     </footer>
