--- a/HW5/index.html
+++ b/HW5/index.html
@@ -13,7 +13,7 @@
 <script src="./js/ryaba.js"></script>
 
 <div class="container">
-    <h1>Сказка о курочке по прозвищу Ряба</h1>
+    <h1>Сказка о курочке по рабочему псевдониму Ряба</h1>
     <form id="messages">
 
         <div class="form-group">
