--- a/HW6/index.html
+++ b/HW6/index.html
@@ -1,19 +1,78 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" href="./css/bootstrap.min.css">
 
-    <title>HW6</title>
-  </head>
-  <body>
-    <h1>Если вы это видите, значит оно работает</h1>
+	<title>HW6</title>
+</head>
+<body>
+	<h1>Если вы это видите, значит оно работает</h1>
 
-    <button type="button" class="btn btn-dark">А это просто тёмная кнопка</button>
+	<div class="container">
+		<form>
+			<div class="form-check">
+				<input class="form-check-input" type="checkbox" value="" id="check1">
+				<label class="form-check-label" for="check1">
+					флажок 1
+				</label>
+			</div>
 
-    <script src="./js/jquery-3.4.1.min.js"></script>
-    <script src="./js/bootstrap.bundle.min.js"></script>
-  </body>
+			<div class="form-check">
+				<input class="form-check-input" type="checkbox" value="" id="check2">
+				<label class="form-check-label" for="check2">
+					флажок 2
+				</label>
+			</div>
+
+			<div class="form-check">
+				<input class="form-check-input" type="checkbox" value="" id="check3">
+				<label class="form-check-label" for="check3">
+					флажок 3
+				</label>
+			</div>
+
+			<div class="form-check">
+				<input class="form-check-input" type="checkbox" value="" id="check4">
+				<label class="form-check-label" for="check4">
+					флажок 4
+				</label>
+			</div>
+
+			<div class="form-check">
+				<input class="form-check-input" type="checkbox" value="" id="check5">
+				<label class="form-check-label" for="check5">
+					флажок 5
+				</label>
+			</div>
+
+			<div class="form-check">
+				<input class="form-check-input" type="radio" name="radios" id="radios1" value="option1">
+				<label class="form-check-label" for="radios1">
+					опция 1
+				</label>
+			</div>
+			<div class="form-check">
+				<input class="form-check-input" type="radio" name="radios" id="radios2" value="option2">
+				<label class="form-check-label" for="radios2">
+					опция 2
+				</label>
+			</div>
+			<div class="form-check">
+				<input class="form-check-input" type="radio" name="radios" id="radios3" value="option3">
+				<label class="form-check-label" for="radios3">
+					опция 3
+				</label>
+			</div>
+			<button type="button" class="btn btn-dark">А это просто тёмная кнопка</button>
+		</form>
+		<script src="./js/jquery-3.4.1.min.js"></script>
+		<script src="./js/bootstrap.bundle.min.js"></script>
+		<script type="text/javascript" src="js/script-a6.js"></script>
+
+		<a href="pages/carousel.html">LINK</a>
+	</div>
+</body>
 </html>
