--- a/HW6/index.html
+++ b/HW6/index.html
@@ -73,6 +73,9 @@
 		<script type="text/javascript" src="js/script-a6.js"></script>
 
 		<a href="pages/carousel.html">LINK</a>
+		<div class="progress">
+			<div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+		</div>
 	</div>
 </body>
 </html>
