HW6 progressbar.html added

--- a/HW6/index.html
+++ b/HW6/index.html
@@ -3,10 +3,20 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 	<link rel="stylesheet" href="./css/bootstrap.min.css">
-
 	<title>HW6</title>
+	<style type="text/css">
+		#progress_line {
+			width: 100%;
+			background-color: grey;
+		}
+
+		#progress_line_view {
+			width: 1%;
+			height: 30px;
+			background-color: green;
+		}
+	</style>
 </head>
 <body>
 	<h1>Если вы это видите, значит оно работает</h1>
@@ -71,11 +81,7 @@
 		<script src="./js/jquery-3.4.1.min.js"></script>
 		<script src="./js/bootstrap.bundle.min.js"></script>
 		<script type="text/javascript" src="js/script-a6.js"></script>
-
-		<a href="pages/carousel.html">LINK</a>
-		<div class="progress">
-			<div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-		</div>
-	</div>
-</body>
-</html>
+		<a href="pages/carousel.html">carousel</a>
+		<a href="pages/progressbar.html">progressbar</a>
+	</body>
+	</html>
