--- a/HW6/index.html
+++ b/HW6/index.html
@@ -83,5 +83,6 @@
 		<script type="text/javascript" src="js/script-a6.js"></script>
 		<a href="pages/carousel.html">carousel</a>
 		<a href="pages/progressbar.html">progressbar</a>
+		<a href="pages/grid.html">grid</a>
 	</body>
 	</html>
